--- a/css/masthead.css
+++ b/css/masthead.css
@@ -6,7 +6,7 @@ header.masthead {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  height: 80vh;
+  height: 100vh;
 }
 header.masthead h1, header.masthead .h1 {
   font-size: 2.25rem;
@@ -71,6 +71,11 @@ header.masthead h1, header.masthead .h1 {
 
 .block {
   width: 100%;
-  height: 70px;
+  height: 55px;
   background-color: rgb(163, 30, 30);
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 1px;
 }
