--- a/css/scroll.css
+++ b/css/scroll.css
@@ -1,36 +1,36 @@
             /* Firefox */
             * {
-                scrollbar-width: thin;
-                scrollbar-color: #333 #DFE9EB;
-              }
-              
-              /* Chrome, Edge and Safari */
-              *::-webkit-scrollbar {
-                width: 13px;
-                width: 13px;
-              }
-              *::-webkit-scrollbar-track {
-                border-radius: 5px;
-                background-color: #DFE9EB;
-              }
-              
-              *::-webkit-scrollbar-track:hover {
-                background-color: #B8C0C2;
-              }
-              
-              *::-webkit-scrollbar-track:active {
-                background-color: #B8C0C2;
-              }
-              
-              *::-webkit-scrollbar-thumb {
-                border-radius: 5px;
-                background-color: #333;
-              }
-              
-              *::-webkit-scrollbar-thumb:hover {
-                background-color: #333;
-              }
-              
-              *::-webkit-scrollbar-thumb:active {
-                background-color: #333;
-              }
+              scrollbar-width: thin;
+              scrollbar-color: rgba(163, 30, 30, .8);
+            }
+            
+            /* Chrome, Edge and Safari */
+            *::-webkit-scrollbar {
+              width: 13px;
+              width: 13px;
+            }
+            *::-webkit-scrollbar-track {
+              border-radius: 5px;
+              background-color: #333;
+            }
+            
+            *::-webkit-scrollbar-track:hover {
+              background-color: #333;
+            }
+            
+            *::-webkit-scrollbar-track:active {
+              background-color: #333;
+            }
+            
+            *::-webkit-scrollbar-thumb {
+              border-radius: 5px;
+              background-color: rgba(163, 30, 30, .8);
+            }
+            
+            *::-webkit-scrollbar-thumb:hover {
+              background-color: rgba(163, 30, 30, .8);
+            }
+            
+            *::-webkit-scrollbar-thumb:active {
+              background-color: rgba(163, 30, 30, .8);
+            }
