--- a/css/masthead.css
+++ b/css/masthead.css
@@ -11,18 +11,22 @@ header.masthead {
 header.masthead h1, header.masthead .h1 {
   font-size: 2rem;
 }
-@media (max-width: 552px) {
+@media (min-width: 600px) {
   header.masthead {
     height: 40vh;
     min-height: 40rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
+    
   }
   header.masthead p {
     font-size: 1rem;
+    color: blue;
+    transition: font-size 1s;
   }
   header.masthead h1, header.masthead .h1 {
-    font-size: 3rem;
+    font-size: 2rem;
+    transition: font-size 1s;
   }
 }
 @media (min-width: 1200px) {
@@ -89,11 +93,19 @@ header.masthead h1, header.masthead .h1 {
 
 .block {
   width: 100%;
-  height: 55px;
-  background-color: rgb(163, 30, 30);
+  height: 45px;
+  background-color: #333;
+  border-radius: 3px;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
   justify-content: space-between;
   padding: 1px;
+  box-shadow: 0px 4px 3px 0px rgb(167, 165, 165);
+}
+.block-red {
+  width: 100%;
+  height: 80px;
+  background-color: rgba(163, 30, 30, 1);
+
 }
