--- a/css/scroll.css
+++ b/css/scroll.css
@@ -1,36 +1,36 @@
             /* Firefox */
             * {
               scrollbar-width: thin;
-              scrollbar-color: rgba(163, 30, 30, .8);
+              scrollbar-color: #333;
             }
             
             /* Chrome, Edge and Safari */
             *::-webkit-scrollbar {
-              width: 13px;
-              width: 13px;
+              width: 15px;
+              width: 15px;
             }
             *::-webkit-scrollbar-track {
               border-radius: 5px;
-              background-color: #333;
+              background-color: rgb(158, 158, 158);
             }
             
             *::-webkit-scrollbar-track:hover {
-              background-color: #333;
+              background-color: rgba(158, 158, 158, .9);
             }
             
             *::-webkit-scrollbar-track:active {
-              background-color: #333;
+              background-color: rgba(158, 158, 158, .9);
             }
             
             *::-webkit-scrollbar-thumb {
-              border-radius: 5px;
-              background-color: rgba(163, 30, 30, .8);
+              border-radius: 2px;
+              background-color: #333;
             }
             
             *::-webkit-scrollbar-thumb:hover {
-              background-color: rgba(163, 30, 30, .8);
+              background-color: #333;
             }
             
             *::-webkit-scrollbar-thumb:active {
-              background-color: rgba(163, 30, 30, .8);
+              background-color: #333;
             }
