--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,19 @@ body {
   .text-decoration {
       text-decoration: none;
   }
+  .block a:hover,
+  .block a:active {
+      opacity: 50%;
+  }
   
+  .footer-bar p {
+      font-size: 20px;
+      font-family: 'Special Elite', cursive;
+      opacity: 100%;
+      transition: opacity 12s;
+  }
+  .footer-bar p:hover {
+      opacity: 40%;
+  }
   
   
