--- a/css/brm-logo.css
+++ b/css/brm-logo.css
@@ -1,4 +1,21 @@
 
+  
+  /* Logo navbar  */
+  .block {
+    width: 100%;
+    height: 45px;
+    background-color: #333;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 1px;
+    box-shadow: 0px 3px 3px 0px rgb(167, 165, 165);
+  }
+  
+
   /* brm logo styling   */
   .brm-cont-logo:hover {
     -webkit-filter: opacity(54%) saturate(68%);
