--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,16 @@
+body {
+    margin: 0; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1.05px;
+    font-size: 18px;
+    overflow-x: hidden;
+  }
+
 
 /* three containers sticky nav at height of logo  */
-.logo {
-    height: 165px;
+  .logo {
+    height: 190px;
     margin: 0px;
     padding: 0px;
   } 
@@ -24,13 +33,7 @@
   }
 /* three containers sticky nav at height of logo  */
 
-body {
-  margin: 0; 
-  font-family: Arial, Helvetica, sans-serif;
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 1.05px;
-  font-size: 18px;
-}
+
 
 .bg-red {
     background-color: rgb(163,30,30);
@@ -69,9 +72,6 @@ body {
     font-family: 'Special Elite', cursive;
     opacity: 100%;
     transition: opacity 12s;
-}
-.footer-bar p:hover {
-    opacity: 40%;
 }
 
 .bold-title {
