--- a/temp.css
+++ b/temp.css
@@ -22,7 +22,7 @@
     /* CONTAINER HEIGHT ADJUSTMENTS */
     --banner-height: 250px;
     --nav-height: 80px;
-    --wrapper-height: 1500px;
+    --wrapper-height: 2500px;
     --footer-height: 50px;
 }
 .bg-main {
@@ -33,10 +33,8 @@
     margin: 0px;
     padding: 0px;
     font-family: var(--font-primary);
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 16px;
     color: var(--text-black);
-    /* overflow-x: hidden; */
 }
 
 
@@ -50,13 +48,20 @@
 .nav-bar {
     /* height: var(--nav-height); */
     /* height: auto; */
-    background-color: var(--bg-alert);
+    width: 100%;
+    background-color: var(--bg-primary);
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 } 
 .wrapper {
     height: var(--wrapper-height);
-    background-color:var(--text-info);
+    background-color:var(--bg-light);
 }   
-
+.navbar {
+    margin: 2px;
+    padding: 2px;
+}
 /* NAV-BAR FIXED AT BANNER HEIGHT WITH JS */
 .fixed-top {
     position: fixed;
@@ -65,28 +70,34 @@
     left: 0;
     z-index: 3;
     overflow: hidden;
-    width: 100%;
 }
 .footer {
      position: fixed;
      bottom: 0px;
      height: var(--footer-height);
      width: 100%;
-     background-color: var(--bg-alert);
+     /* background-color: #333; */
 }
 
 /* === BANNER STYLE =========  */
-/* remove second image mobile  */
+
 .banner-bar {
     background-color: #333;
-    box-shadow: 2px 2px 2px 0px gray;
+    box-shadow: 1px 2px 2px 0px gray;
     margin-bottom: 3px;
-    height: 38px;
+    height: 48px;
     width: 100vw;
+    transition: linear height 300ms;
 }
-@media (max-width: 960px) {
+
+/* remove second image mobile  */
+@media (max-width: 760px) {
     #bannerImg2 {
         display: none;
+    }
+    .banner-bar{
+        height: 38px;
+        width: 100vw;
     }
 }
 
@@ -113,14 +124,14 @@
 }
 .navbar-nav .nav-item .nav-link {
     color:rgb(15, 15, 15);
-    padding: 12px 6px;
+    padding: 8px 6px;
     padding-left: 25px;
 }
 .navbar-nav .nav-item .nav-link:hover {
     background-color: var(--bg-primary);
     color: white;
     width: 100%;
-    padding: 12px 6px;
+    padding: 8px 6px;
     padding-left: 25px;
 }
 .navbar-nav .nav-item .active {
@@ -146,7 +157,7 @@
     background-color: var(--bg-primary);
     color: white;
     width: 100%;
-    padding: 12px 6px;
+    padding: 8px 6px;
 }
 /* full menu  */
 @media (min-width: 960px) {
@@ -162,15 +173,14 @@
         margin: 0px;
     }
     div .dropdown-menu {
-        border-radius: 5px;
+        border: 4px;
         box-shadow: 1px 1px 1px 0px rgba(97, 97, 97, .4);
     }
     .navbar-nav .nav-item .nav-link {
         color:rgb(15, 15, 15);
-        font-size: 1.15em;
         letter-spacing: 1px;
         font-weight: bold;
-        padding: 12px 16px;
+        padding: 1px 16px;
         padding-left: 25px;
         transition: .5s;
     }
@@ -178,7 +188,7 @@
         background-color: var(--bg-primary);
         color: white;
         width: 100%;
-        padding: 12px 16px;
+        padding: 1px 16px;
         padding-left: 25px;
     }
     .navbar-nav .nav-item .active {
