--- a/temp.css
+++ b/temp.css
@@ -29,6 +29,24 @@
     background-color: var(--bg-primary);
 }
 
+.btn-outline-red {
+    display: inline block;
+    font-weight: 500;
+    font-size: 17px;
+    letter-spacing: 1.5px;
+    padding: 10px 18px;
+    border-radius: 5px;
+    transition: 0.5s;
+    border: 2px solid var(--bg-primary);
+    color: white;
+    text-decoration: none;
+}
+.btn-outline-red:hover {
+    background-color: rgba(163, 30, 30, .8);
+    border: 2px solid rgba(163, 30, 30, 1);
+    color: white;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -253,7 +271,121 @@
 }
 /* === NAVBAR STYLE END/ ======  */
 
+/* ===== MASTHEAD ===============*/
+.masthead {
+    box-sizing: border-box;
+    width: 100vw;
+    height: 65vh;
+    background: linear-gradient(to bottom, rgba(122, 122, 122, 0.4) 0%, rgba(58, 16, 16, 0.5) 100%), url("assets/gallery/bg-masthead.jpg") top center;
+    background-size: cover;
+    position: relative;
+}
+.masthead::before {
+    content: "";
+    background: rgba(35, 35, 35, .8);
+    position: absolute;
+    bottom: 0px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+}
+.masthead .masthead-container {
+    position: absolute;
+    box-sizing: border-box;
+    bottom: 0px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0px 15px;
+}
 
+.masthead .masthead-container h1 {
+    margin: 0px 0px 10px 0px;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 42px;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+}
+.masthead .masthead-container h2 {
+    margin: 0px 0px 22px 0px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 36px;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+}
+.masthead .masthead-container .block-text {
+    width: 100vw;
+    height: 90px;
+    background-color: var(--bg-primary);
+    position: absolute;
+    top: 58vh;
+    left: 0px;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: baseline;
+}
+.masthead .masthead-container .block-text p {
+    color: rgb(255, 255, 255);
+    font-size: 38px;
+    text-transform: uppercase;
+}
+@media (min-width: 580px) {
+    .masthead .masthead-container h1 {
+        margin: 0px 0px 10px 0px;
+        font-size: 42px;
+        font-weight: bold;
+        line-height: 48px;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+    }
+    .masthead .masthead-container h2 {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 40px;
+        text-transform: uppercase;
+    }
+    .masthead .masthead-container .block-text p {
+        font-size: 48px;
+    }
+}
+
+@media (min-width: 960px) {
+    .masthead .masthead-container h1 {
+        margin: 0px 0px 20px 0px;
+        font-size: 58px;
+        font-weight: bold;
+        line-height: 50px;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+    }
+    .masthead .masthead-container h2 {
+        margin: 0px 0px 22px 0px;
+        padding-left: 20px;
+        padding-right: 20px;
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 42px;
+        letter-spacing: 1.1px;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+    } 
+    .masthead .masthead-container .block-text p {
+        font-size: 56px;
+    }
+}
+
+
+
+/* ===== MASTHEAD END/============*/
 
 /* == MENU ICON ==*/
     /* (container) .menu-icon  <-- bar(x) */
