--- a/temp.css
+++ b/temp.css
@@ -17,33 +17,45 @@
     --bg-light: rgb(184, 184, 184);
 
 
-    --font-primary:font-family: 'Montserrat', sans-serif;
+    --font-primary: font-family: 'Montserrat', sans-serif;
+  
   
     /* CONTAINER HEIGHT ADJUSTMENTS */
+    --banner-bar-height: 33px;
     --banner-height: 250px;
     --nav-height: 80px;
     --wrapper-height: 2500px;
-    --footer-height: 50px;
+    --footer-height: 35px;
 }
 .bg-main {
-    background-color: var(--bg-primary);
+    background-color: rgba(163, 30, 30, 1);
+}
+/* FONTS  */
+.text-roboto {
+    font-family: "Roboto", Sans-serif;
 }
 
+.text-elite {
+    font-family: 'Special Elite', cursive;
+}
+
+/* BUTTONS  */
 .btn-outline-red {
     display: inline block;
+    font-family: "Roboto", Sans-serif;
     font-weight: 500;
-    font-size: 17px;
+    font-size: 16px;
     letter-spacing: 1.5px;
     padding: 10px 18px;
-    border-radius: 5px;
-    transition: 0.5s;
-    border: 2px solid var(--bg-primary);
+    border-radius: 3px;
+    border: 3px solid var(--bg-primary);
     color: white;
     text-decoration: none;
+    transition: 0.2s;
 }
 .btn-outline-red:hover {
     background-color: rgba(163, 30, 30, .8);
-    border: 2px solid rgba(163, 30, 30, 1);
+    border: 3px solid rgba(163, 30, 30, 1);
     color: white;
 }
 
@@ -56,17 +68,12 @@
 
 }
 
-.text-elite {
-    font-family: 'Special Elite', cursive;
-}
 /* 4 CONTAINERS .BANNER .NAV-BAR .WRAPPER */
 .banner {
     max-height: var(--banner-height);
     width: 100%;
     margin: 0px;
     padding: 0px;
-    overflow: hidden;
-
 } 
 .nav-bar {
     width: 100%;
@@ -87,6 +94,7 @@
 .navbar {
     margin: 0px;
     padding: 0px;
+    z-index: 1000;
 }
 /* NAV-BAR FIXED AT BANNER HEIGHT WITH JS */
 .fixed-top {
@@ -94,8 +102,8 @@
     top: 0;
     right: 0;
     left: 0;
-    z-index: 3;
-    overflow: hidden;
+    z-index: 11;
+
 }
 .footer {
      position: fixed;
@@ -103,6 +111,7 @@
      height: var(--footer-height);
      width: 100%;
      overflow: hidden;
+     z-index: 99000;
      /* background-color: #333; */
 }
 
@@ -112,7 +121,7 @@
     background-color: #333;
     box-shadow: 1px 2px 2px 0px gray;
     margin-bottom: 3px;
-    height: 48px;
+    height: var(--banner-bar-height);
     width: 100vw;
     transition: linear height 300ms;
 }
@@ -121,10 +130,6 @@
 @media (max-width: 760px) {
     #bannerImg2 {
         display: none;
-    }
-    .banner-bar{
-        height: 38px;
-        width: 100vw;
     }
 }
 
@@ -275,11 +280,27 @@
 .masthead {
     box-sizing: border-box;
     width: 100vw;
-    height: 65vh;
-    background: linear-gradient(to bottom, rgba(122, 122, 122, 0.4) 0%, rgba(58, 16, 16, 0.5) 100%), url("assets/gallery/bg-masthead.jpg") top center;
+    height: 66vh;
+    background: linear-gradient(to bottom, rgba(187, 185, 185, 0.4) 0%, rgba(139, 142, 38, 0.5) 100%), url("../assets/gallery/bg-masthead.jpg") top center;
     background-size: cover;
     position: relative;
+    /* transition: linear 10ms; */
 }
+.masthead .masthead-container .block-text {
+    width: 100vw;
+    height: 60px;
+    background-color: var(--bg-primary);
+    position: absolute;
+    top: 62vh;
+    left: 0px;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: baseline;
+    /* transition: ease-out 10ms; */
+}
+
 .masthead::before {
     content: "";
     background: rgba(35, 35, 35, .8);
@@ -291,6 +312,7 @@
 }
 .masthead .masthead-container {
     position: absolute;
+    z-index: 4;
     box-sizing: border-box;
     bottom: 0px;
     top: 0px;
@@ -306,62 +328,84 @@
 
 .masthead .masthead-container h1 {
     margin: 0px 0px 10px 0px;
-    font-size: 32px;
+    font-size: 50px;
     font-weight: bold;
-    line-height: 42px;
+    line-height: 58px;
+    letter-spacing: 3px;
     color: rgb(255, 255, 255);
     text-transform: uppercase;
+    font-family: "Roboto", Sans-serif;
 }
 .masthead .masthead-container h2 {
     margin: 0px 0px 22px 0px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 36px;
+    letter-spacing: .5px;
     color: rgb(255, 255, 255);
     text-transform: uppercase;
+    font-family: "Roboto", Sans-serif;
 }
-.masthead .masthead-container .block-text {
-    width: 100vw;
-    height: 90px;
-    background-color: var(--bg-primary);
-    position: absolute;
-    top: 58vh;
-    left: 0px;
-    right: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: baseline;
+.masthead .masthead-container h3 {
+    margin: 0px 0px 22px 0px;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 30px;
+    color: rgb(255, 255, 255);
+    text-transform: uppercase;
+    font-family: "Roboto", Sans-serif;
 }
+
 .masthead .masthead-container .block-text p {
     color: rgb(255, 255, 255);
-    font-size: 38px;
+    font-size: 30px;
     text-transform: uppercase;
 }
 @media (min-width: 580px) {
+    .masthead {
+        height: 60vh;
+    }
+    .masthead .masthead-container .block-text {
+        top: 56vh;
+    }
     .masthead .masthead-container h1 {
         margin: 0px 0px 10px 0px;
-        font-size: 42px;
+        font-size: 52px;
         font-weight: bold;
-        line-height: 48px;
+        line-height: 52px;
         color: rgb(255, 255, 255);
         text-transform: uppercase;
     }
     .masthead .masthead-container h2 {
-        font-size: 24px;
+        font-size: 22px;
         font-weight: 500;
         line-height: 40px;
         text-transform: uppercase;
     }
+    .masthead .masthead-container h3 {
+        margin: 0px 0px 22px 0px;
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 38px;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        font-family: "Roboto", Sans-serif;
+    }
     .masthead .masthead-container .block-text p {
-        font-size: 48px;
+        font-size: 42px;
     }
 }
 
-@media (min-width: 960px) {
+@media (min-width: 990px) {
+    .masthead {
+        height: 58vh;
+    }
+    .masthead .masthead-container .block-text {
+        top: 54vh;
+    }
     .masthead .masthead-container h1 {
         margin: 0px 0px 20px 0px;
-        font-size: 58px;
+        font-size: 60px;
         font-weight: bold;
         line-height: 50px;
         color: rgb(255, 255, 255);
@@ -369,17 +413,26 @@
     }
     .masthead .masthead-container h2 {
         margin: 0px 0px 22px 0px;
-        padding-left: 20px;
-        padding-right: 20px;
-        font-size: 32px;
+        padding-left: 15vw;
+        padding-right: 15vw;
+        font-size: 30px;
         font-weight: 500;
         line-height: 42px;
         letter-spacing: 1.1px;
         color: rgb(255, 255, 255);
         text-transform: uppercase;
     } 
+    .masthead .masthead-container h3 {
+        margin: 0px 0px 22px 0px;
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 40px;
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        font-family: "Roboto", Sans-serif;
+    }
     .masthead .masthead-container .block-text p {
-        font-size: 56px;
+        font-size: 52px;
     }
 }
 
